fix: page overflow

--- a/src/components/EpisodeList.module.scss
+++ b/src/components/EpisodeList.module.scss
@@ -10,5 +10,6 @@
 
   & > p {
     text-align: justify;
+    overflow: auto;
   }
 }
